update: fix transaction small devices

--- a/history.css
+++ b/history.css
@@ -495,3 +495,48 @@ a {
     }
     /* .......BLUE CONTAINER END..... */
 }
+
+
+@media (min-width: 360px) and (max-height: 550px) {
+  .bodyContainer {
+      height: 80vh;
+  }
+  /* .......BLUE CONTAINER START..... */
+  /* .solodNumber {
+      color:#f99f1b;
+      font-weight: 600;
+      font-size: 19px;
+  }
+  .soldeTitle {
+      margin-top: -5px;
+  }
+  .aLinkHead {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 6px 20px;
+      width: 120px;
+  } */
+  .head {
+    margin-top: -50px;
+  }
+  .bodyPage {
+      height: 40vh;
+      width: 95%;
+      margin-top: 15px;
+      /* padding-right: 10px; */
+      padding-bottom: 50px;
+      overflow: hidden;
+  }
+  .lastBill {
+    overflow:auto;
+    padding: 0px;
+    
+}
+  .footer {
+      height: 50px;
+      margin-top: 10px;
+      border: 2px solid red;
+  }
+  /* .......BLUE CONTAINER END..... */
+}
