--- a/styles.css
+++ b/styles.css
@@ -479,7 +479,6 @@ body {
   .footer {
       height: 50px;
       margin-top: 10px;
-      border: 2px solid red;
   }
   /* .......BLUE CONTAINER END..... */
 }
